Camino only: Bug 346111 - [10.4] javascript:alert() typed in location bar doesn't close if loaded from autocomplete drop-down.  Patch by smorgan <stuart.morgan@alumni.case.edu>. r=cl sr=smfr